<?xml version="1.0"?>
<package>
	<name>ViSensorDriver</name>
	<version>0.0.0</version>
	<description>The driver package for maker binocular</description>
	
	<!-- One maintainer tag required, multiple allowed, one person per tag --> 
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="1370992706@qq.com">gnc430</maintainer>
	
	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>BSD</license>
	
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- You can specify that this package is a metapackage here: -->
		<!-- <metapackage/> -->
		
		<!-- Other tools can request additional information be placed here -->
		
	</export>
</package>